[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Hover_Top.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Hover.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_04/Pawn_04_Hover_Bot.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Pawns/Pawn_04_Parts/Pawn_04_Parts_Legs.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Fall"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_04_Hover_bot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_04_Hover_bot:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_04_Hover_bot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_04_Hover_bot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_04_Hover_bot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_04_Hover_bot:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Off"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_04_Hover_bot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_04_Hover_bot:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="Pawn_04_legs" type="Node2D"]
script = ExtResource( 4 )

[node name="Shield" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 9 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Pawn_04_Hover_Top" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 3 )
texture = ExtResource( 1 )

[node name="Pawn_04_Hover" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 2 )

[node name="Pawn_04_Hover_bot" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 20 )
texture = ExtResource( 3 )
hframes = 9
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fall = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Off = SubResource( 4 )
